--- a/public/stylesheets/dogs/show.css
+++ b/public/stylesheets/dogs/show.css
@@ -1,4 +1,4 @@
-ul {
+/* ul {
     margin: 0 0 1.6rem;
     padding: 0;
     list-style: none;
@@ -54,4 +54,4 @@ section div:nth-child(even) {
     width: 16rem;
     grid-column: 2 / 3;
     margin-bottom: 2.4rem;
-}
+} */
