--- a/views/dogs/adoption.ejs
+++ b/views/dogs/adoption.ejs
@@ -2,6 +2,27 @@
 <link rel="stylesheet" href="/stylesheets/dogs/new.css" />
 <%- include('../partials/nav') %>
 
-
+<main>
+    <h1><%= title %></h1>
+    <form action='' method="POST">
+        <div class="form-group">
+            <label for="adoptorName">Adoptor's Name:</label>
+            <input type="text" name="adoptorName" id="adoptorName" required autocomplete="off">
+        </div>
+        <div class="form-group">
+            <label for="adoptAddress">Adoptor's Address:</label>
+            <input type="text" name="adoptAddress" id="adoptAddress" required autocomplete="off">
+        </div>
+        <div class="form-group">
+            <label for="adoptPhone">Adoptor's Phone:</label>
+            <input type="tel" name="adoptPhone" id="adoptPhone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required autocomplete="off">
+        </div>
+        <div class="form-group">
+            <label for="adoptEmail">Adoptor's Email:</label>
+            <input type="email" name="adoptEmail" id="adoptEmail" required autocomplete="off">
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+</main>
 
 <%- include("../partials/footer") %>
