--- a/views/dogs/adoption.ejs
+++ b/views/dogs/adoption.ejs
@@ -4,7 +4,7 @@
 
 <main>
     <h1><%= title %></h1>
-    <form action='' method="POST">
+    <form action='/dogs/<%= dog._id %>/adoption' method="POST">
         <div class="form-group">
             <label for="adoptorName">Adoptor's Name:</label>
             <input type="text" name="adoptorName" id="adoptorName" required autocomplete="off">
