--- a/views/dogs/vaccines.ejs
+++ b/views/dogs/vaccines.ejs
@@ -65,6 +65,10 @@
             <label for="rabiesDueNext">Next Dose Due</label>
             <input type="date" class="form-control" id="rabiesDueNext" name="rabiesDueNext">
         </div>
+        <div class="form-group">
+            <label for="healthNotes">Enter any notes:</label>
+            <textarea name="healthNotes" id="healthNotes" cols="30" rows="5"></textarea>
+        </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 </main>
