--- a/views/dogs/updateBehavior.ejs
+++ b/views/dogs/updateBehavior.ejs
@@ -4,7 +4,7 @@
 
 <main>
     <h1><%= title %></h1>
-    <form action='/dogs/<%= dog._id %>/behavior' method="POST">
+    <form action='/dogs/<%= dog._id %>/behavior?_method=PUT' method="POST">
         <div class="form-group">
             <div class="btn-group-toggle" data-toggle="buttons">
                 <label class="btn btn-secondary active">
