--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -26,8 +26,8 @@ body {
 }
 
 nav {
-  background-color: white;
-  font-size: 1.6rem;
+  /* background-color: white; */
+  /* font-size: 1.6rem; */
   display: flex;
   justify-content: center;
 }
