--- a/views/dogs/show.ejs
+++ b/views/dogs/show.ejs
@@ -2,9 +2,17 @@
 <link rel="stylesheet" href="/stylesheets/dogs/show.css" />
 <%- include('../partials/nav') %>
 <main>
+    <h1><%= title %></h1> 
     <div class="card" style="width: 18rem;">
         <div class="card-body">
             <h5 class="card-title"><%= `${dog.name}` %>'s Details</h5>
+            <h5 class="card-title">
+                <% if(dog.adoptable === true){ %>
+                    <strong><%= dog.name %> is ready for adoption!</strong>
+                <% }else{ %>
+                    <strong><%= dog.name %> is not ready for adoption.</strong>
+                <% } %>
+            </h5>
             <p class="card-text">
                 Name: <strong><%= `${dog.name}` %></strong><br>
                 Age: <strong><%= `${dog.age}` %></strong><br>
@@ -27,10 +35,10 @@
                         Rabies Rec: <strong><%= `${vaccs.rabiesRec.toUTCString().split(' ').slice(1, 4).join(' ')}` %></strong><br>
                         Next Dose Due: <strong><%= `${vaccs.rabiesDueNext.toUTCString().split(' ').slice(1, 4).join(' ')}` %></strong>
                     </p>
-                    <a href="/dogs/vaccines/<%= dog._id %>/update" class="card-link"><button type="submit">UPDATE VACCINE FORM</button></a>
+                    <a href="/dogs/vaccines/<%= dog._id %>/update" class="card-link"><button type="submit" class="btn btn-info">UPDATE VACCINE FORM</button></a>
                 <% }) %> 
                 <% } else { %>
-                <a href="/dogs/vaccines/<%= dog._id %>" class="card-link"><button type="submit">COMPLETE VACCINE FORM</button></a>
+                <a href="/dogs/vaccines/<%= dog._id %>" class="card-link"><button type="submit" class="btn btn-info">COMPLETE VACCINE FORM</button></a>
                 <% } %>
             <% if(dog.behavior.length) { %>
                 <% dog.behavior.forEach(test => { %>
@@ -62,13 +70,20 @@
                     <% } %>
                     <%= dog.name %>'s energy is a <strong><%= test.energy %></strong> / 5. 
                     </p>
-                    <a href="/dogs/behavior/<%= dog._id %>/update" class="card-link"><button type="submit">UPDATE BEHAVIOR FORM</button></a>
+                    <a href="/dogs/behavior/<%= dog._id %>/update" class="card-link"><button type="submit" class="btn btn-info">UPDATE BEHAVIOR FORM</button></a>
             <% }) %> 
             <% } else { %>
-            <a href="/dogs/behavior/<%= dog._id %>" class="card-link"><button type="submit">COMPLETE BEHAVIOR FORM</button></a>
+            <a href="/dogs/behavior/<%= dog._id %>" class="card-link"><button type="submit" class="btn btn-info">COMPLETE BEHAVIOR FORM</button></a>
             <% } %>
-            <a href="/dogs/adoption/<%= dog._id %>" class="card-link"><button type="submit">PROCESS ADOPTION</button></a>
-            <a href="/dogs/transfer/<%= dog._id %>" class="card-link"><button type="submit">PROCESS TRANSFER</button></a>
+            <!-- <div class="btn-group-toggle" data-toggle="buttons">
+                <label class="btn btn-secondary active">
+                    <input type="checkbox" id="adoptable" name="adoptable" <%= dog.adoptable ? "checked" : "" %>>    Update Adoptability
+                </label>
+            </div> -->
+            <% if(dog.adoptable){ %> 
+            <a href="/dogs/adoption/<%= dog._id %>" class="card-link"><button type="submit" class="btn btn-success">PROCESS ADOPTION</button></a>
+            <% } %> 
+            <a href="/dogs/transfer/<%= dog._id %>" class="card-link"><button type="submit" class="btn btn-warning">PROCESS TRANSFER</button></a>
             <form action="/dogs/<%= dog._id %>?_method=DELETE" class="delete-form" method="POST">
                 <button type="submit" class="btn btn-danger">REMOVE FROM DB</button>
             </form>
