--- a/views/dogs/show.ejs
+++ b/views/dogs/show.ejs
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="/stylesheets/dogs/show.css" />
 <%- include('../partials/nav') %>
 <main>
-    <h1><%= title %></h1> 
+    <h1 class="head-title"><%= title %></h1> 
     <div class="card" style="width: 18rem;">
         <div class="card-body">
             <h5 class="card-title"><%= `${dog.name}` %>'s Details</h5>
