--- a/views/dogs/updateVaccs.ejs
+++ b/views/dogs/updateVaccs.ejs
@@ -3,7 +3,7 @@
 <%- include('../partials/nav') %>
 
 <main>
-    <h1><%= title %></h1>
+    <h1 class="head-title"><%= title %></h1>
     <form action='/dogs/<%= dog._id %>/vaccines?_method=PUT' method="POST">
         <div class="btn-group-toggle" data-toggle="buttons">
             <div class="form-group">
