--- a/public/stylesheets/dogs/new.css
+++ b/public/stylesheets/dogs/new.css
@@ -17,3 +17,11 @@
     border-radius: 5px;
     font-size: 2rem;
 }
+
+.my-form-card {
+    width: 30rem;
+    background-color: white;
+    border-radius: 4px;
+    /* display: flex;
+    align-items: center; */
+}
