--- a/views/dogs/adoption.ejs
+++ b/views/dogs/adoption.ejs
@@ -3,7 +3,7 @@
 <%- include('../partials/nav') %>
 
 <main>
-    <h1><%= title %></h1>
+    <h1 class="head-title"><%= title %></h1>
     <form action='/dogs/<%= dog._id %>/adoption' method="POST">
         <div class="form-group">
             <label for="adoptorName">Adoptor's Name:</label>
