--- a/views/dogs/notReadyIndex.ejs
+++ b/views/dogs/notReadyIndex.ejs
@@ -3,7 +3,7 @@
 <%- include('../partials/nav') %>
 
 <main>
-    <h1><%= title %></h1>
+    <h1 class="head-title"><%= title %></h1>
     <div>
         <% dogs.forEach((dog) => { %>
             <% if(!dog.adoptable){ %> 
