--- a/views/dogs/transfer.ejs
+++ b/views/dogs/transfer.ejs
@@ -3,7 +3,7 @@
 <%- include('../partials/nav') %>
 
 <main>
-    <h1><%= title %></h1>
+    <h1 class="head-title"><%= title %></h1>
     <form action='/dogs/<%= dog._id %>/transfer' method="POST">
         <div class="form-group">
             <label for="specialRescue">Rescue Name:</label>
