--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -13,6 +13,9 @@
       href="/dogs/new" <%- title === 'Dog Intake' ? 'class="active"' : '' %>
       ><button type="submit">ADD DOG</button></a>
       <a 
+      href="/dogs/home" <%- title === 'Home' ? 'class="active"' : '' %>
+      ><button type="submit">HOME</button></a>
+      <!-- <a 
       href="/dogs" <%- title === 'Adoptable Dogs' ? 'class="active"' : '' %>
       ><button type="submit">ADOPTABLE DOGS</button></a>
       <a 
@@ -24,6 +27,9 @@
       <a 
       href="/dogs/transferred" <%- title === 'Specialty Case Transfers' ? 'class="active"' : '' %>
       ><button type="submit">TRANSFERRED DOGS</button></a>
+      <a 
+      href="/dogs/my-intake-history" <%- title === 'My Intake History' ? 'class="active"' : '' %>
+      ><button type="submit">MY INTAKE HISTORY</button></a> -->
     <% } else { %>
       <a href="/auth/google" class="siwg-link">
         <button type="submit" class="siwg">
