--- a/public/stylesheets/dogs/new.css
+++ b/public/stylesheets/dogs/new.css
@@ -14,7 +14,7 @@
 #newDogSubmit {
     width: 25rem;
     padding: 5px;
-    border-radius: 5px;
+    /* border-radius: 5px; */
     font-size: 2rem;
 }
 
@@ -22,6 +22,7 @@
     width: 30rem;
     background-color: white;
     border-radius: 4px;
-    /* display: flex;
-    align-items: center; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
