--- a/public/stylesheets/dogs/show.css
+++ b/public/stylesheets/dogs/show.css
@@ -55,3 +55,26 @@ section div:nth-child(even) {
     grid-column: 2 / 3;
     margin-bottom: 2.4rem;
 } */
+
+.btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 8px;
+}
+
+.btn-success,
+.btn-warning {
+    padding-right: 30px;
+    text-decoration: none;
+}
+
+.btn-danger {
+    padding-right: 41px;
+    margin-top: 15px;
+    margin-bottom: 5px;
+}
+
+.card-link {
+    text-decoration: none;
+}
